# ai-prompt-master

./: .gitignore  main.py  pyproject.toml
.github/: CITATION.cff  SUPPORT.md
migrations/: env.py
migrations/versions/: e49729c6ebc2_feat_add_base_user_userachievement_.py
scripts/db/: games.py  progress_data.py
src/: __init__.py  config.py
src/bot/: bot.py  commands.py  lifespan.py
src/bot/filters/: __init__.py  filter.py
src/bot/fsm/: __init__.py  game.py  user.py
src/bot/keyboards/inline/: game.py  user.py
src/bot/middlewares/: __init__.py  base.py  game.py  user.py
src/bot/responses/: __init__.py  base.py  game.py  user.py
src/bot/routers/: __init__.py  base.py  game.py  user.py
src/bot/text/: __init__.py  base.py  game.py  text.py  user.py
src/bot/utils/: markdown.py  response.py  text.py
src/databases/: __init__.py  postgresql_manager.py
src/enums/: level.py  llm.py
src/models/: __init__.py  achievement.py  base.py  game.py  level.py  user.py  user_achievement.py  user_stats.py
src/prompts/game/: __init__.py  anti_prompt.py  check.py  code.py  creative.py  learn.py  puzzles.py
src/repositories/: __init__.py  achievement.py  game.py  level.py  user.py  user_achievement.py  user_stats.py
src/services/: __init__.py  game.py  progress_data.py  user.py
src/utils/: llm.py  prompt.py  regex.py  repository.py  service.py
