[project]
name = "ai-prompt-master"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiogram>=3.22.0",
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "g4f>=0.6.0.3",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.43",
]
