[project]
name = "ai-prompt-master"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiogram>=3.22.0",
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "g4f>=0.6.0.3",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "redis>=6.4.0",
    "ruff>=0.12.10",
    "sqlalchemy>=2.0.43",
]


[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle (PEP 8 style issues like spacing, indentation)
    "F",  # pyflakes (undefined variables, unused imports, etc.)
    "B",  # flake8-bugbear (likely bugs, dangerous patterns)
    "W",  # pycodestyle warnings (minor style warnings)
    "C",  # mccabe (complexity checker — too complex functions)
    "N",  # pep8-naming (enforces correct naming conventions)
    "A",  # flake8-builtins (avoid shadowing Python built-ins like `list`, `id`, etc.)
    "PT", # pytest-style – checks specific to pytest
    "I"  # isort – import sorting
]
ignore = ["E501"] # ignore line-too-long, if you want
